fixed section "how it works" off centered.

--- a/css/site/site.css
+++ b/css/site/site.css
@@ -429,7 +429,7 @@ body.off-canvas.home-page.active-gov-bar .page {
   }
 
   .home-page .page .section-3 {
-    padding: 0 1em;
+    /*padding: 0 1em;*/
   }
   .home-page .page .section-2 {
   padding: 0 0 5em 0;
